bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
var x:Boolean = false
^BDR:3: error: identifier expected but string literal found.
  if (litMessage():String == "R") {droite();avance()};
                             ^BDR:14: error: ')' expected but '}' found.
	}
        ^